[gd_scene load_steps=5 format=3 uid="uid://da4fhkbajq7hp"]

[ext_resource type="Script" path="res://settings.gd" id="1_2bpvt"]
[ext_resource type="PackedScene" uid="uid://b11xf2rdf2q21" path="res://window_create_project.tscn" id="2_1lido"]
[ext_resource type="PackedScene" uid="uid://v2axihhn2vb" path="res://window_default_setting.tscn" id="2_6irkc"]
[ext_resource type="PackedScene" uid="uid://bhgbl5eytydyh" path="res://window_preview_code.tscn" id="4_0uewb"]

[node name="Settings" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2bpvt")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ButtonCreateProject" type="LinkButton" parent="MarginContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "建立新專案"

[node name="WindowCreateProject" parent="MarginContainer/VBoxContainer2/HBoxContainer/ButtonCreateProject" instance=ExtResource("2_1lido")]
unique_name_in_owner = true
visible = false

[node name="ButtonDefaultSetting" type="LinkButton" parent="MarginContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "一般設定"

[node name="WindowDefaultSetting" parent="MarginContainer/VBoxContainer2/HBoxContainer/ButtonDefaultSetting" instance=ExtResource("2_6irkc")]
unique_name_in_owner = true
visible = false

[node name="VBoxContainerProject" type="VBoxContainer" parent="MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="LabelProjectName" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainerProject"]
unique_name_in_owner = true
layout_mode = 2
text = "目前專案: "

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VBoxContainerProject"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VBoxContainerProject/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainerProject/HBoxContainer/HBoxContainer"]
layout_mode = 2
text = "半形/全形"

[node name="OptionButtonFullHalfWidth" type="OptionButton" parent="MarginContainer/VBoxContainer2/VBoxContainerProject/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
item_count = 2
selected = 0
popup/item_0/text = "半形"
popup/item_0/id = 0
popup/item_1/text = "全形"
popup/item_1/id = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VBoxContainerProject/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainerProject/HBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "半形寬度"

[node name="SpinBoxCharHalfWidth" type="SpinBox" parent="MarginContainer/VBoxContainer2/VBoxContainerProject/HBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
value = 8.0
allow_greater = true

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VBoxContainerProject/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainerProject/HBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "字元高度"

[node name="SpinBoxCharHeight" type="SpinBox" parent="MarginContainer/VBoxContainer2/VBoxContainerProject/HBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
min_value = 2.0
step = 2.0
value = 16.0
allow_greater = true
editable = false

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VBoxContainerProject/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainerProject/HBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "字元數量"

[node name="SpinBoxCharCount" type="SpinBox" parent="MarginContainer/VBoxContainer2/VBoxContainerProject/HBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
value = 1.0
allow_greater = true

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VBoxContainerProject"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainerProject/HBoxContainer2"]
layout_mode = 2
text = "文字轉像素"

[node name="LineEditTextToPixel" type="LineEdit" parent="MarginContainer/VBoxContainer2/VBoxContainerProject/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "填入"
clear_button_enabled = true

[node name="ButtonTextToPixel" type="Button" parent="MarginContainer/VBoxContainer2/VBoxContainerProject/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "轉換"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VBoxContainerProject"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="CheckBoxNativeDialog" type="CheckBox" parent="MarginContainer/VBoxContainer2/VBoxContainerProject/HBoxContainer3"]
layout_mode = 2
text = "使用作業系統原生對話方塊"

[node name="ButtonTxtFileToPixel" type="Button" parent="MarginContainer/VBoxContainer2/VBoxContainerProject/HBoxContainer3"]
layout_mode = 2
text = "文字檔轉像素"

[node name="FileDialogTxtFileToPixel" type="FileDialog" parent="MarginContainer/VBoxContainer2/VBoxContainerProject/HBoxContainer3/ButtonTxtFileToPixel"]
unique_name_in_owner = true
title = "Open a File"
initial_position = 1
size = Vector2i(640, 480)
ok_button_text = "開啟"
file_mode = 0
access = 2
filters = PackedStringArray("*.txt")

[node name="ButtonImgFileToPixel" type="Button" parent="MarginContainer/VBoxContainer2/VBoxContainerProject/HBoxContainer3"]
layout_mode = 2
text = "圖像檔轉像素"

[node name="FileDialogImgFileToPixel" type="FileDialog" parent="MarginContainer/VBoxContainer2/VBoxContainerProject/HBoxContainer3/ButtonImgFileToPixel"]
unique_name_in_owner = true
title = "Open a File"
initial_position = 1
size = Vector2i(640, 480)
ok_button_text = "開啟"
file_mode = 0
access = 2
filters = PackedStringArray("*.jpg,*.jpeg,*.png")

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VBoxContainerProject"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VBoxContainerProject/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/VBoxContainerProject/HBoxContainer4/HBoxContainer"]
layout_mode = 2
text = "註解"

[node name="LineEditAnnotation" type="LineEdit" parent="MarginContainer/VBoxContainer2/VBoxContainerProject/HBoxContainer4/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "填入 (以,分隔各註解)"
clear_button_enabled = true

[node name="ButtonPreviewCode" type="Button" parent="MarginContainer/VBoxContainer2/VBoxContainerProject/HBoxContainer4"]
layout_mode = 2
text = "預覽程式碼"

[node name="WindowPreviewCode" parent="MarginContainer/VBoxContainer2/VBoxContainerProject/HBoxContainer4/ButtonPreviewCode" instance=ExtResource("4_0uewb")]
unique_name_in_owner = true
visible = false

[node name="HBoxContainer5" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VBoxContainerProject"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ButtonSaveImage" type="Button" parent="MarginContainer/VBoxContainer2/VBoxContainerProject/HBoxContainer5"]
unique_name_in_owner = true
layout_mode = 2
text = "生成圖片檔"

[connection signal="pressed" from="MarginContainer/VBoxContainer2/HBoxContainer/ButtonCreateProject" to="." method="_on_button_create_project_pressed"]
[connection signal="should_create_project" from="MarginContainer/VBoxContainer2/HBoxContainer/ButtonCreateProject/WindowCreateProject" to="." method="_on_window_create_project_should_create_project"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/HBoxContainer/ButtonDefaultSetting" to="." method="_on_button_default_setting_pressed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer2/VBoxContainerProject/HBoxContainer/HBoxContainer/OptionButtonFullHalfWidth" to="." method="_on_option_button_full_half_width_item_selected"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer2/VBoxContainerProject/HBoxContainer/HBoxContainer2/SpinBoxCharHalfWidth" to="." method="_on_spin_box_char_half_width_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer2/VBoxContainerProject/HBoxContainer/HBoxContainer3/SpinBoxCharHeight" to="." method="_on_spin_box_char_height_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer2/VBoxContainerProject/HBoxContainer/HBoxContainer4/SpinBoxCharCount" to="." method="_on_spin_box_char_count_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainerProject/HBoxContainer2/ButtonTextToPixel" to="." method="_on_button_text_to_pixel_pressed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer2/VBoxContainerProject/HBoxContainer3/CheckBoxNativeDialog" to="." method="_on_check_box_native_dialog_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainerProject/HBoxContainer3/ButtonTxtFileToPixel" to="." method="_on_button_txt_file_to_pixel_pressed"]
[connection signal="file_selected" from="MarginContainer/VBoxContainer2/VBoxContainerProject/HBoxContainer3/ButtonTxtFileToPixel/FileDialogTxtFileToPixel" to="." method="_on_file_dialog_txt_file_to_pixel_file_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainerProject/HBoxContainer3/ButtonImgFileToPixel" to="." method="_on_button_img_file_to_pixel_pressed"]
[connection signal="file_selected" from="MarginContainer/VBoxContainer2/VBoxContainerProject/HBoxContainer3/ButtonImgFileToPixel/FileDialogImgFileToPixel" to="." method="_on_file_dialog_img_file_to_pixel_file_selected"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer2/VBoxContainerProject/HBoxContainer4/HBoxContainer/LineEditAnnotation" to="." method="_on_line_edit_annotation_text_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainerProject/HBoxContainer4/ButtonPreviewCode" to="." method="_on_button_preview_code_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainerProject/HBoxContainer5/ButtonSaveImage" to="." method="_on_button_save_image_pressed"]
